refactor: migrate to stack-based architecture with remote state
- Split monolithic config into stacks (foundation/network/compute/scm)
- Migrate all state to B2 remote backend
- Add Infisical integration for secrets management
- Create helper scripts for stack management
- Update all documentation
- Consolidate Infisical credentials via symlinks

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,31 @@
 .terraform/
 .terraformrc
 CLAUDE.md
-backend.tf
+
+# Allow stack backend configurations (safe to commit)
+!stacks/*/backend.tf
+
+# Exclude backend credentials (contains secrets)
+backend.tfvars
+stacks/_shared/backend.tfvars
+!stacks/_shared/backend.tfvars.example
+
+# Environment files
+.env
+.env.*
+!.env.example
+
+# IDE files  
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Crash logs
+crash.log
+crash.*.log
